Prevent video from overflowing its container

--- a/themes/torwood/assets/css/main.css
+++ b/themes/torwood/assets/css/main.css
@@ -43,6 +43,11 @@ img {
   height: auto;
 }
 
+video, iframe, embed, object {
+  max-width: 100%;
+  height: auto;
+}
+
 a {
   color: #660330;
 }
